# chalkmind

./: .dockerignore  .env.example  .gitignore  Dockerfile  ENV.md  Makefile  README.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: deploy.yml
backend/: config.py  lesson_generator.py  main.py  observability.py  voice_agent.py  voice_session.py
backend/middleware/: cors.py  rate_limiter.py
backend/models/: requests.py
backend/security/: blocklist.py  recaptcha.py  sanitizer.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: audio-capture.js  audio-playback.js
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/components/board/: ChalkboardCanvas.tsx  DrawCommand.tsx
frontend/src/components/landing/: AgeGroupChips.tsx  DifficultyChips.tsx  NameField.tsx  TopicInput.tsx
frontend/src/components/quiz/: QuizOverlay.tsx
frontend/src/components/score/: Certificate.tsx  ScoreSlide.tsx
frontend/src/hooks/: useLesson.ts  usePageTracking.ts  usePlayback.ts  useQuiz.ts  useRecaptcha.ts  useVoiceSession.ts
frontend/src/pages/: BoardPage.tsx  LandingPage.tsx  TermsPage.tsx
frontend/src/styles/: global.scss
frontend/src/types/: lesson.ts  recaptcha.d.ts
frontend/src/utils/: analytics.ts  validation.ts
